--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -2,3 +2,7 @@
 $corDeFundo: #040714;
 $corTextoPrincipal: silver;
 $corTextoSecundaria: #f9f9f9;
+$corDeFundoBotãoPrimario: #6421ff;
+$corDeFundoBotãoSecundario: #0065e5;
+$corDeFundoBotãoDark: rgba(0,0,0,0.8);
+
