--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -112,6 +112,7 @@ body{
     padding: 8px 14px;
     letter-spacing: 1px;
     border: 1px solid variaveis.$corDeFundoBotãoPrimario;
+    cursor: pointer;
 
     &:hover {
         background-color: lighten(variaveis.$corDeFundoBotãoPrimario, 3%);
